--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>uni-manage-core</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>SAMS</title>
+    <meta name="description" content="student academic management system" />
+    <meta name="contributors" content="sams" />
 
-    <meta property="og:title" content="uni-manage-core" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="sams" />
+    <meta property="og:description" content="Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBtufLJExiyHQpqQN9U7AJbCnhmU2QTcWr_w&s" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@sams_dev" />
+    <meta name="twitter:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBtufLJExiyHQpqQN9U7AJbCnhmU2QTcWr_w&s" />
   </head>
 
   <body>
