--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SAMS</title>
     <meta name="description" content="student academic management system" />
-    <meta name="contributors" content="sams" />
+    <meta name="contributors" content="student project" />
 
     <meta property="og:title" content="sams" />
     <meta property="og:description" content="Project" />
