--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>SAMS</title>
     <meta name="description" content="student academic management system" />
     <meta name="contributors" content="student project" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
     <meta property="og:title" content="sams" />
     <meta property="og:description" content="Project" />
@@ -15,6 +16,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@sams_dev" />
     <meta name="twitter:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBtufLJExiyHQpqQN9U7AJbCnhmU2QTcWr_w&s" />
+
   </head>
 
   <body>
